--- a/character/character.html
+++ b/character/character.html
@@ -439,34 +439,18 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 <!-- 파티 내용이 여기에 동적으로 추가됨 -->
             </div>
         </div>
-
-        <div style="height: 40px;"></div>
-        <!-- 광고 (기본적으로 표시) -->
-        <div id="ad-unit-2" class="ad-unit">
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-format="fluid"
-                data-ad-layout-key="-gc+3r+68-9q-29"
-                data-ad-client="ca-pub-5862324369257695"
-                data-ad-slot="5373524213"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
-        <div id="ad-unit-p5-2" class="ad-unit">
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-format="fluid"
-                data-ad-layout-key="-gc+3r+68-9q-29"
-                data-ad-client="ca-pub-5862324369257695"
-                data-ad-slot="8118051131"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
     </div>
 
+    <!-- 하단 -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="7268003897"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     
 </div>
 
@@ -1344,7 +1328,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     '대미지 보너스': 'ダメージボーナス',
                     '대미지보너스': 'ダメージボーナス',
                     '크리티컬 확률': 'クリティカル確率',
-                    '크리티컬확률': 'クリティカル確률',
+                    '크리티컬확률': 'クリティカル確率',
                     '크리티컬 효과': 'クリティカル効果',
                     '크리티컬효과': 'クリティカル効果',
                     '관통': '貫通',
