--- a/character/character.html
+++ b/character/character.html
@@ -441,6 +441,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>
     </div>
 
+    <div style="height: 40px;"></div>
     <!-- 하단 -->
     <ins class="adsbygoogle"
         style="display:block"
