--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -73,6 +73,8 @@ alternate_urls:
                 <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> または
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>までお問い合わせください。
             </p>
+            <a href="https://x.com/Absolroot" target="_blank" class="twitter-link" style="text-decoration: none; font-weight: bold;"><span class="twitter-icon"></span>Twitter @absolroot</a>
+
         </div>
 
         <div class="about-section" id="exchange-code-section">
