--- a/character/character.html
+++ b/character/character.html
@@ -1276,7 +1276,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 
         // 추천 운영 라벨 번역
         const operationLabel = currentLang === 'kr' ? '추천 운영' :
-                             currentLang === 'en' ? 'Recommended Operation' : '推奨運用';
+                             currentLang === 'en' ? 'Skill Rotation' : 'スキル回転';
         const operationTitleEl = document.querySelector('.operation-settings .setting-section:first-child h3');
         if (operationTitleEl) operationTitleEl.textContent = operationLabel;
 
