--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -60,17 +60,17 @@ alternate_urls:
             <h2 id="contact-title">문의 및 피드백</h2>
             <p id="contact-description" class="korean-content">
                 버그, 잘못된 데이터를 발견하거나 피드백이 있으실 경우 
-                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>디스코드</a> 또는 
+                <a href="https://discord.gg/8S8pnv2MsH" target="_blank" class="discord-link"><span class="discord-icon"></span>디스코드</a> 또는 
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>로 문의주세요.
             </p>
             <p id="contact-description-en" class="english-content" style="display: none;">
                 If you find bugs, incorrect data, or have feedback, please contact us via
-                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> or
+                <a href="https://discord.gg/8S8pnv2MsH" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> or
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>. 
             </p>
             <p id="contact-description-jp" class="japanese-content" style="display: none;">
                 バグや間違ったデータを発見したり、フィードバックがある場合は
-                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> または
+                <a href="https://discord.gg/8S8pnv2MsH" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> または
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>までお問い合わせください。
             </p>
             <a href="https://x.com/Absolroot" target="_blank" class="twitter-link" style="text-decoration: none; font-weight: bold;"><span class="twitter-icon"></span>Twitter @absolroot</a>
