--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -107,6 +107,7 @@ alternate_urls:
                         <h4>Special Thanks</h4>
                         <ul>
                             <li>Data Provider : Iant</li>
+                            <li>Translation : RedHarv</li>
                         </ul>
                     </div>
                     <div class="supporter-tier">
