--- a/login/signup.html
+++ b/login/signup.html
@@ -155,7 +155,7 @@ document.getElementById('googleSignup').addEventListener('click', async () => {
     const { data, error } = await supabase.auth.signInWithOAuth({
       provider: 'google',
       options: {
-        redirectTo: 'https://rfzxpdcaauglcsansqop.supabase.co/auth/v1/callback'
+        redirectTo: 'https://ipdkvuybgxczqwwmrqsw.supabase.co/auth/v1/callback'
       }
     });
 
