--- a/character/character.html
+++ b/character/character.html
@@ -2239,15 +2239,15 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             'recommended-stats': {
                 'kr': {
                     title: '권장 육성 스탯',
-                    content: '캐릭터의 스킬에 스탯의 영향도를 받는 형태가 있을 경우 최대 효과를 보기 위한 스테이터스. 가능하면 충족하는 것을 추천드립니다.'
+                    content: '캐릭터의 스킬에 스탯의 영향도를 받는 형태가 있을 경우 최대 효과를 보기 위한 스테이터스. 가능하면 충족하는 것을 추천드립니다. (전투 기준)'
                 },
                 'en': {
                     title: 'Recommended Training Stats',
-                    content: 'Status required to achieve maximum effect when character skills are affected by stats. Recommend meeting these requirements if possible.'
+                    content: 'Status required to achieve maximum effect when character skills are affected by stats. Recommend meeting these requirements if possible. (Based on battle entry)'
                 },
                 'jp': {
                     title: '推奨育成ステータス',
-                    content: 'キャラクターのスキルにステータスの影響を受ける形がある場合、最大効果を得るためのステータス。可能であれば満たすことをお勧めします。'
+                    content: 'キャラクターのスキルにステータスの影響を受ける形がある場合、最大効果を得るためのステータス。可能であれば満たすことをお勧めします。(戦闘開始時)'
                 }
             },
             'battle-entry': {
