--- a/login/forgot-password.html
+++ b/login/forgot-password.html
@@ -3,7 +3,7 @@ layout: default
 title: 비밀번호 찾기
 permalink: /login/forgot-password.html
 ---
-
+<link rel="stylesheet" href="login.css">
 {% include supabase-config.html %}
 
 <div class="auth-container">
@@ -20,79 +20,6 @@ permalink: /login/forgot-password.html
   </div>
 </div>
 
-<style>
-.auth-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 80vh;
-  padding: 2rem;
-}
-
-.auth-box {
-  background: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 400px;
-}
-
-.auth-box h2 {
-  margin-bottom: 1rem;
-  text-align: center;
-  color: #111;
-}
-
-.description {
-  text-align: center;
-  color: #666;
-  margin-bottom: 1.5rem;
-  font-size: 0.9rem;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-input {
-  padding: 0.8rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-button {
-  padding: 0.8rem;
-  background: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-button:hover {
-  background: #0056b3;
-}
-
-.auth-links {
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.auth-links a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 0.9rem;
-}
-
-.auth-links a:hover {
-  text-decoration: underline;
-}
-</style>
 
 <script>
 document.getElementById('resetPasswordForm').addEventListener('submit', async (e) => {
