--- a/login/index.html
+++ b/login/index.html
@@ -3,12 +3,13 @@ layout: default
 title: 로그인
 language: kr
 ---
-
+<link rel="stylesheet" href="login.css">
 {% include supabase-config.html %}
 <div class="main-wrapper">
 <div class="auth-container">
   <div class="auth-box">
     <h2>로그인</h2>
+    <!--
     <form id="loginForm">
       <input type="email" id="loginEmail" placeholder="이메일" required>
       <input type="password" id="loginPassword" placeholder="비밀번호" required>
@@ -17,7 +18,7 @@ language: kr
     <div class="auth-links">
       <a href="/login/signup.html">회원가입</a>
       <a href="/login/forgot-password.html">비밀번호 찾기</a>
-    </div>
+    </div>-->
     <div class="social-login">
       <button id="googleLogin" class="google-btn">
         <img src="https://www.google.com/favicon.ico" alt="Google" width="20">
@@ -28,119 +29,7 @@ language: kr
 </div>
 </div>
 
-<style>
-.auth-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 80vh;
-  padding: 2rem;
-}
 
-.auth-box {
-  background: rgb(255, 255, 255);
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 400px;
-}
-
-.auth-box h2 {
-  margin-bottom: 1.5rem;
-  text-align: center;
-  color: #111;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-input {
-  padding: 0.8rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-button {
-  padding: 0.8rem;
-  background: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-button:hover {
-  background: #0056b3;
-}
-
-.auth-links {
-  margin-top: 1rem;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-}
-
-.auth-links a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 0.9rem;
-}
-
-.auth-links a:hover {
-  text-decoration: underline;
-}
-
-.social-login {
-  margin-top: 1.5rem;
-  text-align: center;
-}
-
-.google-btn {
-  background: white;
-  color: #333;
-  border: 1px solid #ddd;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  width: 100%;
-}
-
-.google-btn:hover {
-  background: #f8f9fa;
-}
-
-.google-btn img {
-  width: 20px;
-  height: 20px;
-}
-
-.loading-spinner {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border: 2px solid rgba(255,255,255,0.3);
-  border-radius: 50%;
-  border-top-color: #fff;
-  animation: spin 1s ease-in-out infinite;
-  margin-right: 8px;
-}
-
-@keyframes spin {
-  to { transform: rotate(360deg); }
-}
-
-button:disabled {
-  opacity: 0.7;
-  cursor: not-allowed;
-}
-</style>
 
 <script>
 // 로그인 처리
