--- a/login/signup.html
+++ b/login/signup.html
@@ -3,7 +3,7 @@ layout: default
 title: 회원가입
 permalink: /login/signup.html
 ---
-
+<link rel="stylesheet" href="login.css">
 {% include supabase-config.html %}
 
 <div class="auth-container">
@@ -27,97 +27,6 @@ permalink: /login/signup.html
   </div>
 </div>
 
-<style>
-.auth-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 80vh;
-  padding: 2rem;
-}
-
-.auth-box {
-  background: rgb(110, 12, 12);
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 400px;
-}
-
-.auth-box h2 {
-  margin-bottom: 1.5rem;
-  text-align: center;
-  color: #111;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-input {
-  padding: 0.8rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-button {
-  padding: 0.8rem;
-  background: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-button:hover {
-  background: #0056b3;
-}
-
-.auth-links {
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.auth-links a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 0.9rem;
-}
-
-.auth-links a:hover {
-  text-decoration: underline;
-}
-
-.social-login {
-  margin-top: 1.5rem;
-  text-align: center;
-}
-
-.google-btn {
-  background: white;
-  color: #333;
-  border: 1px solid #ddd;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  width: 100%;
-}
-
-.google-btn:hover {
-  background: #f8f9fa;
-}
-
-.google-btn img {
-  width: 20px;
-  height: 20px;
-}
-</style>
 
 <script>
 document.getElementById('signupForm').addEventListener('submit', async (e) => {
