--- a/auth/callback.html
+++ b/auth/callback.html
@@ -64,31 +64,22 @@ title: 인증 처리 중
 </style>
 
 <script>
-  document.addEventListener('DOMContentLoaded', async () => {
-    console.log('콜백 URL:', window.location.href);
-    try {
-      // PKCE 플로우: 코드 교환
-      const { data, error } = await supabase.auth.exchangeCodeForSession(window.location.href);
-      console.log('교환 결과:', { data, error });
+document.addEventListener('DOMContentLoaded', async () => {
+  console.log('콜백 URL:', window.location.href);
   
-      if (error) throw error;
-  
-      if (data.session) {
-        console.log('세션 생성 완료:', data.session.user);
-        localStorage.setItem('user', JSON.stringify(data.session.user));
-  
-        const redirectUrl = sessionStorage.getItem('auth_redirect') || '/';
-        sessionStorage.removeItem('auth_redirect');
-        window.location.href = redirectUrl;
-      } else {
-        console.error('세션 없음');
-        window.location.href = '/login';
-      }
-    } catch (error) {
-      console.error('콜백 인증 에러:', error);
-      alert('인증 처리 중 문제가 발생했습니다.');
-      sessionStorage.removeItem('auth_redirect');
-      window.location.href = '/login';
-    }
-  });
-  </script>
+  // PKCE 교환 대신 단순 세션 확인
+  const { data, error } = await supabase.auth.getSession();
+  console.log('세션 상태:', { data, error });
+
+  if (data?.session) {
+    console.log('로그인 성공:', data.session.user);
+    const redirectUrl = sessionStorage.getItem('auth_redirect') || '/';
+    sessionStorage.removeItem('auth_redirect');
+    window.location.href = redirectUrl;
+  } else {
+    console.error('세션이 존재하지 않음');
+    window.location.href = '/login';
+  }
+});
+
+</script>
