--- a/auth/callback.html
+++ b/auth/callback.html
@@ -64,22 +64,30 @@ title: 인증 처리 중
 </style>
 
 <script>
-document.addEventListener('DOMContentLoaded', async () => {
-  console.log('콜백 URL:', window.location.href);
+  document.addEventListener('DOMContentLoaded', async () => {
+    console.log('콜백 URL:', window.location.href);
   
-  // PKCE 교환 대신 단순 세션 확인
-  const { data, error } = await supabase.auth.getSession();
-  console.log('세션 상태:', { data, error });
-
-  if (data?.session) {
-    console.log('로그인 성공:', data.session.user);
-    const redirectUrl = sessionStorage.getItem('auth_redirect') || '/';
-    sessionStorage.removeItem('auth_redirect');
-    window.location.href = redirectUrl;
-  } else {
-    console.error('세션이 존재하지 않음');
-    window.location.href = '/login';
-  }
-});
-
-</script>
+    // Supabase가 자동으로 세션을 저장했는지 확인
+    const { data, error } = await supabase.auth.getSession();
+    console.log('세션 상태:', data, error);
+  
+    if (error) {
+      console.error('세션 확인 에러:', error);
+      window.location.href = '/login';
+      return;
+    }
+  
+    if (data.session) {
+      console.log('로그인 성공:', data.session.user);
+      localStorage.setItem('user', JSON.stringify(data.session.user));
+  
+      const redirectUrl = sessionStorage.getItem('auth_redirect') || '/';
+      sessionStorage.removeItem('auth_redirect');
+      window.location.href = redirectUrl;
+    } else {
+      console.error('세션이 존재하지 않음');
+      window.location.href = '/login';
+    }
+  });
+  </script>
+  
