--- a/login/index.html
+++ b/login/index.html
@@ -44,6 +44,7 @@ document.getElementById('googleLogin').addEventListener('click', async (e) => {
       const { error } = await supabase.auth.signInWithOAuth({
         provider: 'google',
         options: {
+          redirectTo: 'https://lufel.net/auth/callback',
           queryParams: { prompt: 'consent', access_type: 'offline' }
         }
       });
