--- a/apps/tactic/tactic-upload.html
+++ b/apps/tactic/tactic-upload.html
@@ -162,7 +162,7 @@ description: 페르소나5 더 팬텀 X 택틱을 업로드하세요.
 }
 
 .login-btn {
-    background: linear-gradient(45deg, #667eea 0%, #764ba2 100%);
+    background: #6d0303;
     color: white;
     border: none;
     padding: 12px 30px;
@@ -177,13 +177,13 @@ description: 페르소나5 더 팬텀 X 택틱을 업로드하세요.
 }
 
 .upload-container {
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
 }
 
 .tactic-upload-form {
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     padding: 30px;
 }
@@ -213,7 +213,7 @@ description: 페르소나5 더 팬텀 X 택틱을 업로드하세요.
 .form-group input,
 .form-group select,
 .form-group textarea {
-    width: 100%;
+    width: 90%;
     padding: 12px;
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
@@ -274,7 +274,7 @@ description: 페르소나5 더 팬텀 X 택틱을 업로드하세요.
 }
 
 .submit-btn {
-    background: linear-gradient(45deg, #667eea 0%, #764ba2 100%);
+    background:#6d0303;
     color: white;
 }
 
