--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@ alternate_urls:
             <h2 id="popular-characters-title">인기 괴도</h2>
             <div class="character-cards">
                 <div class="character-card">
+                    <div class="character-card-img"><a href="./character.html?name=미나미·여름&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미나미·여름.webp" alt="미나미·여름"></a></div>
+                    <div class="character-card-text"><p>미나미·여름</p></div>
+                </div>
+                <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=이치고&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/이치고.webp" alt="이치고"></a></div>
                     <div class="character-card-text"><p>시카노 이치고</p></div>
                 </div>
@@ -157,10 +161,6 @@ alternate_urls:
                 <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=마유미&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마유미.webp" alt="마유미"></a></div>
                     <div class="character-card-text"><p>하시모토 마유미</p></div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=야오링·사자무&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무"></a></div>
-                    <div class="character-card-text"><p>야오링·사자무</p></div>
                 </div>
             </div>
         </div>
