--- a/character/character.html
+++ b/character/character.html
@@ -288,7 +288,43 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 </div>
             </div>
         </div>
-        
+        <div style="height: 48px;"></div>
+        <!-- 광고 (기본적으로 표시) -->
+        <div id="ad-unit-1" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3r+68-9q-29"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="5373524213"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!-- Persona 5 광고 (기본적으로 표시) -->
+        <div id="ad-unit-p5-1" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3r+68-9q-29"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="8118051131"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!-- Persona 3 광고-->
+        <div id="ad-unit-p3-1" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3r+68-9q-29"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="2039727945"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
     </div>
 
 
