--- a/character/character.html
+++ b/character/character.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [cha_detail]
 custom_js: [cha_detail, tooltip, detail/dot-carousel, marked.min]
-custom_data: [characters/characters.js, revelations/revelations.js, characters/character_ritual.js, characters/character_skills.js, characters/character_weapon.js, characters/character_operation.js, characters/character_party.js, tooltip.js, wonder/persona.js, characters/character.js, wonder/weapons.js, characters/character_review.js]
+custom_data: [characters/characters.js, revelations/revelations.js, characters/character_ritual.js, characters/character_skills.js, characters/character_weapon.js, characters/character_operation.js, characters/character_party.js, tooltip.js, wonder/persona.js, wonder/weapons.js, characters/character_review.js]
 permalink: /character.html
 language: kr
 title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
