--- a/character/character.html
+++ b/character/character.html
@@ -290,6 +290,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>
         <div style="height: 48px;"></div>
         <!-- 광고 (기본적으로 표시) -->
+        <!--
         <div id="ad-unit-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -301,7 +302,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
         <div id="ad-unit-p5-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -313,7 +313,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 3 광고-->
+
         <div id="ad-unit-p3-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -324,7 +324,16 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>
+        </div>-->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="fluid"
+            data-ad-layout-key="-gc+3r+68-9q-29"
+            data-ad-client="ca-pub-5862324369257695"
+            data-ad-slot="7875168668"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 
 
@@ -415,6 +424,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 
         <div style="height: 30px;"></div>
         <!-- 광고 (기본적으로 표시) -->
+        <!--
         <div id="ad-unit-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -426,7 +436,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
         <div id="ad-unit-p5-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -438,7 +447,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -450,6 +458,16 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+        -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="fluid"
+            data-ad-layout-key="-gc+3r+68-9q-29"
+            data-ad-client="ca-pub-5862324369257695"
+            data-ad-slot="7875168668"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <div style="height: 10px;"></div>
     </div>
 
@@ -2198,7 +2216,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             const characterName = new URLSearchParams(window.location.search).get('name');
             if (characterName) {
                 // Update ads based on character's persona3, persona5 property
-                updateAdsForPersona5(characterName);
+                // updateAdsForPersona5(characterName);
                 // Load recommendations if the section is visible
                 if (recommendations && recommendations.style.display !== 'none') {
                     loadRecommendations(characterName);
