--- a/character/character.html
+++ b/character/character.html
@@ -332,7 +332,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             data-ad-client="ca-pub-5862324369257695"
             data-ad-slot="7875168668"></ins>
         <script>
+            setTimeout(() => {
             (adsbygoogle = window.adsbygoogle || []).push({});
+            }, 1000);
         </script>
     </div>
 
@@ -466,7 +468,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             data-ad-client="ca-pub-5862324369257695"
             data-ad-slot="7875168668"></ins>
         <script>
+            setTimeout(() => {
             (adsbygoogle = window.adsbygoogle || []).push({});
+            }, 1000);
         </script>
         <div style="height: 10px;"></div>
     </div>
