--- a/character/character.html
+++ b/character/character.html
@@ -327,7 +327,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>-->
         <ins class="adsbygoogle"
             style="display:block"
-            data-ad-format="fluid"
+            data-ad-format="auto"
             data-ad-layout-key="-gc+3r+68-9q-29"
             data-ad-client="ca-pub-5862324369257695"
             data-ad-slot="7875168668"></ins>
@@ -463,7 +463,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         -->
         <ins class="adsbygoogle"
             style="display:block"
-            data-ad-format="fluid"
+            data-ad-format="auto"
             data-ad-layout-key="-gc+3r+68-9q-29"
             data-ad-client="ca-pub-5862324369257695"
             data-ad-slot="7875168668"></ins>
