--- a/character/character.html
+++ b/character/character.html
@@ -290,7 +290,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>
         <div style="height: 48px;"></div>
         <!-- 광고 (기본적으로 표시) -->
-        <!--
         <div id="ad-unit-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -302,6 +301,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+        <!-- Persona 5 광고 (기본적으로 표시) -->
         <div id="ad-unit-p5-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -313,7 +313,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-
+        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -324,18 +324,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>-->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-format="auto"
-            data-ad-layout-key="-gc+3r+68-9q-29"
-            data-ad-client="ca-pub-5862324369257695"
-            data-ad-slot="7875168668"></ins>
-        <script>
-            setTimeout(() => {
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            }, 1000);
-        </script>
+        </div>
     </div>
 
 
@@ -426,7 +415,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 
         <div style="height: 30px;"></div>
         <!-- 광고 (기본적으로 표시) -->
-        <!--
         <div id="ad-unit-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -438,6 +426,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+        <!-- Persona 5 광고 (기본적으로 표시) -->
         <div id="ad-unit-p5-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -449,6 +438,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -460,18 +450,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-format="auto"
-            data-ad-layout-key="-gc+3r+68-9q-29"
-            data-ad-client="ca-pub-5862324369257695"
-            data-ad-slot="7875168668"></ins>
-        <script>
-            setTimeout(() => {
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            }, 1000);
-        </script>
         <div style="height: 10px;"></div>
     </div>
 
@@ -2220,7 +2198,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             const characterName = new URLSearchParams(window.location.search).get('name');
             if (characterName) {
                 // Update ads based on character's persona3, persona5 property
-                // updateAdsForPersona5(characterName);
+                updateAdsForPersona5(characterName);
                 // Load recommendations if the section is visible
                 if (recommendations && recommendations.style.display !== 'none') {
                     loadRecommendations(characterName);
