--- a/character/character.html
+++ b/character/character.html
@@ -288,8 +288,8 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 </div>
             </div>
         </div>
+        <!--
         <div style="height: 48px;"></div>
-        <!-- 광고 (기본적으로 표시) -->
         <div id="ad-unit-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -301,7 +301,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
         <div id="ad-unit-p5-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -313,7 +312,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -324,7 +322,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>
+        </div>-->
     </div>
 
 
@@ -412,9 +410,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         <div class="weapons-container">
             <!-- 무기들이 여기에 동적으로 추가됨 -->
         </div>
-
+        <!-- 
         <div style="height: 30px;"></div>
-        <!-- 광고 (기본적으로 표시) -->
+        
         <div id="ad-unit-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -426,7 +424,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
         <div id="ad-unit-p5-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -438,7 +435,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block"
@@ -449,7 +445,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>
+        </div>-->
         <div style="height: 10px;"></div>
     </div>
 
