--- a/character/character.html
+++ b/character/character.html
@@ -310,7 +310,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="8118051131"></ins>
             <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+                setTimeout(() => {
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                }, 500);
             </script>
         </div>
         <!-- Persona 3 광고-->
@@ -322,7 +324,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="2039727945"></ins>
             <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+                setTimeout(() => {
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                }, 500);
             </script>
         </div>
     </div>
