--- a/character/character.html
+++ b/character/character.html
@@ -292,7 +292,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         <!-- 광고 (기본적으로 표시) -->
         <div id="ad-unit-1" class="ad-unit">
             <ins class="adsbygoogle"
-                style="display:block"
+                style="display:block; background-color:transparent"
                 data-ad-format="fluid"
                 data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
@@ -301,10 +301,10 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
+        <!-- 
         <div id="ad-unit-p5-1" class="ad-unit">
             <ins class="adsbygoogle"
-                style="display:block"
+                style="display:block; background-color:transparent"
                 data-ad-format="fluid"
                 data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
@@ -315,10 +315,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 }, 500);
             </script>
         </div>
-        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-1" class="ad-unit">
             <ins class="adsbygoogle"
-                style="display:block"
+                style="display:block; background-color:transparent"
                 data-ad-format="fluid"
                 data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
@@ -328,7 +327,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 }, 500);
             </script>
-        </div>
+        </div>-->
     </div>
 
 
@@ -421,7 +420,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         <!-- 광고 (기본적으로 표시) -->
         <div id="ad-unit-2" class="ad-unit">
             <ins class="adsbygoogle"
-                style="display:block"
+                style="display:block; background-color:transparent"
                 data-ad-format="fluid"
                 data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
@@ -430,10 +429,10 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 5 광고 (기본적으로 표시) -->
+        <!-- 
         <div id="ad-unit-p5-2" class="ad-unit">
             <ins class="adsbygoogle"
-                style="display:block"
+                style="display:block; background-color:transparent"
                 data-ad-format="fluid"
                 data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
@@ -442,10 +441,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- Persona 3 광고-->
         <div id="ad-unit-p3-2" class="ad-unit">
             <ins class="adsbygoogle"
-                style="display:block"
+                style="display:block; background-color:transparent"
                 data-ad-format="fluid"
                 data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
@@ -453,7 +451,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>
+        </div>-->
         <div style="height: 10px;"></div>
     </div>
 
@@ -2202,7 +2200,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             const characterName = new URLSearchParams(window.location.search).get('name');
             if (characterName) {
                 // Update ads based on character's persona3, persona5 property
-                updateAdsForPersona5(characterName);
+                // updateAdsForPersona5(characterName);
                 // Load recommendations if the section is visible
                 if (recommendations && recommendations.style.display !== 'none') {
                     loadRecommendations(characterName);
